[package]
name = "aiot"
version = "0.7.0"
edition = "2018"
license = "MIT"
keywords = ["alink", "aliyun", "mqtt", "iot", "sdk"]
description = "Rust Link SDK (Aliyun IoT) based on Alink Protocol."
repository = "https://github.com/lebai-robotics/aiot-rust"

[dependencies]
libc = "^0.2"
log = "^0.4"
thiserror = "^1.0"
tokio = { version = "^1.9", features = [
    "sync",
    "rt-multi-thread",
    "macros",
    "io-util",
] }
rumqttc = "^0.8"
hmac = "^0.11"
sha2 = "^0.9"
rustls = "^0.19"
tungstenite = "^0.14"
tokio-tungstenite = { version = "^0.15", features = ["rustls-tls"] }
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
serde_repr = "^0.1"
futures-util = { version = "^0.3", default-features = false, features = [
    "async-await",
    "sink",
    "std",
] }
url = "^2.2"
futures = "^0.3"
rand = "^0.8"
regex = "^1.5"
async-trait = "^0.1"
reqwest = { version = "^0.11", features = ["json", "rustls-tls"] }
hyper-tls = { version = "^0.5", features = ["vendored"] }
chrono = "^0.4"
lazy_static = "^1.4"

[dev-dependencies]
env_logger = "^0.9"
anyhow = "^1.0"
