[package]
description = "Rust Link SDK (Aliyun IoT) based on Alink Protocol."
edition = "2021"
keywords = ["alink", "aliyun", "mqtt", "iot", "sdk"]
license = "MIT"
name = "aiot"
repository = "https://github.com/lebai-robotics/aiot-rust"
version = "0.9.1"

[dependencies]
async-trait = "^0.1"
chrono = "^0.4"
enum-iterator = "0.7.0"
enum-kinds = "0.5.1"
futures = "^0.3"
futures-util = { version = "^0.3", default-features = false, features = [
    "async-await",
    "sink",
    "std",
] }
hmac = "^0.12"
lazy_static = "^1.4"
libc = "^0.2"
log = "^0.4"
rand = "^0.8"
regex = "^1.5"
reqwest = { version = "^0.11", features = ["json", "rustls-tls", "stream"] }
rumqttc = { version = "^0.12.0", features = ["use-rustls"] }
rustls = "^0.20.0"
rustls-pemfile = "1.0.0"
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
serde_repr = "^0.1"
serde_with = "^1.14.0"
sha2 = "^0.10"
md-5 = "^0.10"
spin = "0.9"
tempdir = "^0.3.7"
thiserror = "^1.0"
tokio = { version = "^1.9", features = [
    "sync",
    "rt-multi-thread",
    "macros",
    "io-util",
] }
tokio-tungstenite = { version = "^0.17.1", features = ["rustls-tls-native-roots"] }
tungstenite = "^0.17.2"
url = "^2.2"
crc = "3.0.0"

[dev-dependencies]
anyhow = "^1.0"
env_logger = "^0.9"
